	* deprecated compact storage allocation
	* close files in separate thread on systems where close() may block (Mac OS X for instance)
	* don't create all directories up front when adding torrents
	* support DHT scrape
	* added support for fadvise/F_RDADVISE for improved disk read performance
	* introduced pop_alerts() which pops the entire alert queue in a single call
	* support saving metadata in resume file, enable it by default for magnet links
	* support for receiving multi announce messages for local peer discovery
	* added session::listen_no_system_port flag to prevent libtorrent from ever binding the listen socket to port 0
	* added option to not recheck on missing or incomplete resume data
	* extended stats logging with statistics=on builds
	* added new session functions to more efficiently query torrent status
	* added alerts for added and removed torrents
	* expanded plugin interface to support session wide states
	* made the metadata block requesting algorithm more robust against hash check failures
	* support a separate option to use proxies for peers or not
	* pausing the session now also pauses checking torrents
	* moved alert queue size limit into session_settings
	* added support for DHT rss feeds (storing only)
	* added support for RSS feeds
	* fixed up some edge cases in DHT routing table and improved unit test of it
	* added error category and error codes for HTTP errors
	* made the DHT implementation slightly more robust against routing table poisoning and node ID spoofing
	* support chunked encoding in http downloads (http_connection)
	* support adding torrents by url to the .torrent file
	* support CDATA tags in xml parser
	* use a python python dictionary for settings instead of session_settings object (in python bindings)
	* optimized metadata transfer (magnet link) startup time (shaved off about 1 second)
	* optimized swarm startup time (shaved off about 1 second)
	* support DHT name lookup